[package]
name = "rss_client"
version = "0.0.1"
authors = ["John Nagle <nagle@animats.com>"]


[dependencies.hyper]

[dependencies.RustyXML]
git = "https://github.com/Florob/RustyXML"

[dependencies.chrono]
#   Temporary until chrono gets some parsing functions.
# git = "https://github.com/John-Nagle/rust-chrono"

[[bin]]
name = "rss_client"



